--- a/app/styles/_libs-override.scss
+++ b/app/styles/_libs-override.scss
@@ -3,10 +3,10 @@
 -------------------------------------------------- */
 
 $body-bg: $c-body-bg;
-$text-color: $c-text-main-color;
-$link-color: $c-header-main-bg;
-$link-hover-color: $c-123-color;
-$headings-color: $c-123-color;
+$text-color: $c-text-color;
+$link-color: $c-link-color;
+$link-hover-color: $c-link-hover-color;
+$headings-color: $c-headings-color;
 
 $headings-font-weight: normal;
 $font-size-base: 18px;
