--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -33,13 +33,18 @@ $c-123-color: $c-color-base-01;
 $c-header-top-bg: $c-color-base-09;
 //$c-header-main-bg: #9195A6;
 $c-header-main-bg: $c-color-base-08;
+//$c-header-main-bg: #fff;
 $c-header-bottom-bg: #f2f2f2;
 $c-body-bg: #f2f2f2;
 //$c-body-bg: #9195A6;
 $c-footer-bg: $c-color-base-03;
 //$c-footer-bg: silver;
 $c-ticker-bg: transparent;
-$c-text-main-color: $c-color-base-04;
-$c-link-composite-color: white;
+$c-headings-color: $c-123-color;
+$c-text-color: $c-color-base-04;
+$c-link-color: $c-color-base-08;
+$c-link-hover-color: $c-123-color;
+$c-link-composite-color: #f2f2f2;
 $c-link-composite-color-hover: $c-color-base-07;
 $c-box-color: #f2f2f2;
+$c-logo-color: #fff;
