--- a/app/views/acknowledgments-template.html
+++ b/app/views/acknowledgments-template.html
@@ -1,5 +1,5 @@
 <div class="acknowledgments-ticker">
-    <carousel interval="interval">
+    <carousel interval="interval" class="carousel-fade">
         <slide ng-repeat="datum in data" active="slide.active">
             <blockquote class="quote">{{ datum.quote }}</blockquote>
             <p class="ref">{{ datum.ref }}</p>
