--- a/app/views/partials/who-we-are.html
+++ b/app/views/partials/who-we-are.html
@@ -7,4 +7,4 @@
     as well as agile startups R&amp;D environments.
 </p>
 
-<a class="home-link pull-right" href="/success-stories.html">See references</a>
+<a class="home-link pull-right" href="/company-profile.html#wrap">Learn more</a>
