--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -37,7 +37,8 @@ h4, h5, h6 {
   font-size: $font-size-base * 1.05;
 }
 
-#home h2 {
+#home h2,
+#ticker h2 {
   font-weight: bold;
 }
 
@@ -77,3 +78,38 @@ a, a:link, a:visited, a:hover, a:active, a:focus {
     padding-right: 0;
   }
 }
+
+/* libs customization */
+
+.carousel-fade {
+  .carousel-inner {
+    .item {
+      opacity: 0;
+      -webkit-transition-property: opacity;
+      -moz-transition-property: opacity;
+      -o-transition-property: opacity;
+      transition-property: opacity;
+    }
+
+    .active {
+      opacity: 1;
+    }
+
+    .active.left,
+    .active.right {
+      left: 0;
+      opacity: 0;
+      z-index: 1;
+    }
+
+    .next.left,
+    .prev.right {
+      opacity: 1;
+    }
+  }
+
+  .carousel-control {
+    z-index: 2;
+  }
+}
+
