adding 'what we use' section, adding technologies directive.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -22,5 +22,6 @@
 @import "acknowledgments";
 @import "staff";
 @import "services";
+@import "technologies";
 /* angularjs animation */
 @import "animation";
