--- a/app/styles/_banner.scss
+++ b/app/styles/_banner.scss
@@ -3,11 +3,15 @@
   .carousel-inner {
     height: $c-tile-height - $c-box-pad * 2;
     border: 1px solid #fff;
-    box-shadow: -4px -6px 20px #ccc;
+    //box-shadow: -4px -6px 20px #ccc;
     img {
       width: 100%;
       margin: auto;
       background-size: contain;
+      //-webkit-filter: blur(5px);
+      //-moz-filter: blur(5px);
+      //filter: blur(5px);
+      //opacity: .7;
     }
   }
 }
