fixing html5 mode hash urls

--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -71,6 +71,10 @@ a, a:link, a:visited, a:hover, a:active, a:focus {
   font-size: $font-size-base * 1.2;
 }
 
+.large-text {
+  font-size: $font-size-base * 1.2;
+}
+
 /* bootstrap specific */
 
 .list-inline.pull-right {
