--- a/app/styles/_fonts.scss
+++ b/app/styles/_fonts.scss
@@ -1,2 +1,3 @@
 @import "fonts/lane/stylesheet.css";
 @import "fonts/district-thin-pro/stylesheet.css";
+@import "fonts/proxima-nova/stylesheet.css";
