--- a/app/views/home.html
+++ b/app/views/home.html
@@ -31,7 +31,7 @@
         <div class="row">
             <div class="col-md-12">
                 <section class="technologies-box">
-                    <h2>What We Use</h2>
+                    <h2>What we use</h2>
                     <technologies></technologies>
                     <a class="home-link pull-right" href="/technology-domain.html#wrap">Learn more</a>
                 </section>
