--- a/app/views/partials/who-we-are.html
+++ b/app/views/partials/who-we-are.html
@@ -1,10 +1,9 @@
 <h2>Who we are</h2>
 
-<p>
-    We are a leading System Integrator, R&amp;D, IT Consulting and Training
-    company, Our experts combine the skill set of Database Administers with
-    Java Architects expertise, and have managed enterprise level projects
-    as well as agile startups R&amp;D environments.
+<p class="large-text">
+    We are a leading system integrator, R&amp;D, IT consulting and training
+    company, and have managed enterprise level projects as well as agile startups
+    R&amp;D environments.
 </p>
 
 <a class="home-link pull-right" href="/company-profile.html#wrap">Learn more</a>
