fixing html5 mode hash urls

--- a/app/views/footer.html
+++ b/app/views/footer.html
@@ -2,27 +2,21 @@
 
     <div class="row">
 
-        <!--
-         <a href="http://www.w3.org/html/logo/">
-            <img src="http://www.w3.org/html/logo/badge/html5-badge-h-solo.png" width="63" height="64" alt="HTML5 Powered" title="HTML5 Powered">
-        </a>
-        -->
-
         <!-- TODO duplicate this list at the top -->
         <!-- NOTE: tab-indexes 31-50 are reserved for bottom navigation -->
         <nav class="col-md-3">
             <ul class="links-list list-unstyled">
                 <li>
-                    <a tabindex="31" href="/page/news-and-events.html">News &amp; Events</a>
+                    <a tabindex="31" href="/news-and-events">News &amp; Events</a>
                 </li>
                 <li>
-                    <a tabindex="32" href="/contact-us.html">Contact Us</a>
+                    <a tabindex="32" href="/contact-us">Contact Us</a>
                 </li>
                 <li>
-                    <a tabindex="33" href="/job-opportunities.html">Job Opportunities</a>
+                    <a tabindex="33" href="/job-opportunities">Job Opportunities</a>
                 </li>
                 <li>
-                    <a tabindex="34" href="/copyright-notice.html">Copyright Notice</a>
+                    <a tabindex="34" href="/copyright-notice">Copyright Notice</a>
                 </li>
             </ul>
         </nav>
@@ -31,7 +25,7 @@
 
         <div class="col-md-3 text-center website-meta">
             <p>
-                <img src="/images/logos/technologies/angularjs.png" />
+                <!--<img src="/images/logos/technologies/angularjs.png" />-->
                 Built with <a href="http://angularjs.org/">Angular JS</a>
             </p>
             <p>
