--- a/app/views/header.html
+++ b/app/views/header.html
@@ -9,10 +9,10 @@
                 <!-- NOTE: tab-indexes 51-70 are reserved for low priority links -->
                 <ul class="list-inline pull-right">
                     <li>
-                        <a tabindex="51" href="/news-and-events.html">News &amp; Events</a>
+                        <a tabindex="51" href="/news-and-events">News &amp; Events</a>
                     </li>
                     <li>
-                        <a tabindex="52" href="/job-opportunities.html">Job Opportunities</a>
+                        <a href="/job-opportunities">Job Opportunities</a>
                     </li>
                 </ul>
             </nav>
