--- a/app/views/scaffold-template.html
+++ b/app/views/scaffold-template.html
@@ -1,6 +1,7 @@
 <div id="wrap">
     <header id="header" ng-include="'views/header.html'"></header>
-    <div id="body-content" ng-controller="MainCtrl">
+    <!--<div id="body-content" ng-controller="MainCtrl">-->
+    <div id="body-content">
         <div ng-view id="main" fn="scroll()"></div>
     </div>
 </div>
