--- a/app/views/partials/who-we-are.html
+++ b/app/views/partials/who-we-are.html
@@ -6,4 +6,4 @@
     R&amp;D environments.
 </p>
 
-<a class="home-link pull-right" href="/company-profile.html#wrap">Learn more</a>
+<a class="home-link pull-right" href="/company-profile#top">Learn more</a>
