--- a/app/views/home.html
+++ b/app/views/home.html
@@ -20,7 +20,7 @@
                 <section class="acknowledgments-box">
                     <h2>Our customers say</h2>
                     <div acknowledgments></div>
-                    <a class="home-link pull-right" href="/success-stories.html#wrap">See references</a>
+                    <a class="home-link pull-right" href="/success-stories#top">See references</a>
                 </section>
             </div>
             <div class="col-md-4">
@@ -33,7 +33,7 @@
                 <section class="technologies-box">
                     <h2>What we use</h2>
                     <technologies></technologies>
-                    <a class="home-link pull-right" href="/technology-domain.html#wrap">Learn more</a>
+                    <a class="home-link pull-right" href="/technology-domain#top">Learn more</a>
                 </section>
             </div>
         </div>
