--- a/app/views/partials/what-we-do.html
+++ b/app/views/partials/what-we-do.html
@@ -35,4 +35,4 @@
     </li>
 </ul>
 
-<a class="home-link pull-right" href="/services.html#wrap">Find out more</a>
+<a class="home-link pull-right" href="/engagement-models">Find out more</a>
