--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -28,7 +28,7 @@
       height: 100%;
       padding: 0 .5em;
       &:hover {
-        background-color: lighten($c-header-top-bg, 4%);
+        background-color: tint($c-header-top-bg, 5%);
       }
     }
   }
