--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -28,7 +28,7 @@
       height: 100%;
       padding: 0 .5em;
       &:hover {
-        background-color: tint($c-header-top-bg, 5%);
+        background-color: tint($c-header-top-bg, 7%);
       }
     }
   }
@@ -39,8 +39,7 @@
 }
 
 #header-main {
-  //padding: 30px 0 0;
-  padding: 20px 0 40px;
+  padding: 0 0 40px;
   background-color: $c-header-main-bg;
   .container {
     padding-left: $c-header-side-pad;
@@ -51,7 +50,7 @@
   }
   .logo {
     position: relative;
-    top: .9em;
+    top: 36px;
     //background: url('/images/123completed-logo.png') 50% 50% no-repeat;
     //background-size: contain;
     span {
