fixed broken images links in distribution, styled trainings page and common bootstrap buttons.

--- a/app/styles/_defaults.scss
+++ b/app/styles/_defaults.scss
@@ -13,6 +13,8 @@ $font-size-base: $c-base-font-size;
 $font-family-base: $c-base-font;
 $line-height-base: 1.5;
 $grid-gutter-width: $c-box-pad * .9;
+$btn-info-bg: $c-header-main-bg;
+$border-radius-base: 0;
 
 
 /* bootstrap-ui
